<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/change_pass_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/changePass"
        android:textColor="@color/primaryColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/ic3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_login_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/layout_old_pass"
        app:layout_constraintHeight_percent="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:tint="@color/darkOrange"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_old_pass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintStart_toEndOf="@+id/ic3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:boxBackgroundColor="@null"
        app:passwordToggleEnabled="true"
        app:layout_constraintWidth_percent="0.75">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_old_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/oldPass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:ignore="TextContrastCheck"
            />
        <TextView
            android:id="@+id/tvWarningOld"
            style="@style/TextWarning"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/passNotCorrect"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/edt_old_pass"
            app:layout_constraintStart_toStartOf="@+id/edt_old_pass"
            app:layout_constraintTop_toBottomOf="@+id/edt_old_pass" />
    </com.google.android.material.textfield.TextInputLayout>



    <ImageView
        android:id="@+id/ic_new"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_login_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/layout_old_pass"
        app:layout_constraintHeight_percent="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:tint="@color/darkOrange"
        tools:ignore="ContentDescription" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_new_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintStart_toEndOf="@+id/ic_new"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.75"
        app:boxBackgroundColor="@null"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_new_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/newPass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvWarningPass"
            style="@style/TextWarning"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/passCondition"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/edt_new_password"
            app:layout_constraintStart_toStartOf="@+id/edt_new_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_new_password" />

    </com.google.android.material.textfield.TextInputLayout>



    <ImageView
        android:id="@+id/ic2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_login_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/layout_confirm_pass"
        app:layout_constraintHeight_percent="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:tint="@color/darkOrange"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_confirm_pass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintStart_toEndOf="@+id/ic2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_percent="0.75"
        app:boxBackgroundColor="@null"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="no"
            android:hint="@string/confirmPass"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="17sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvWarningConfirm"
            style="@style/TextWarning"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/passNotMatch"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/edt_confirm_pass"
            app:layout_constraintStart_toStartOf="@+id/edt_confirm_pass"
            app:layout_constraintTop_toBottomOf="@+id/edt_confirm_pass" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/btn_login_bg"
        android:gravity="center"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_confirm_pass"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintWidth_percent="0.85"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:tint="@color/primaryColor"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ImageView
        android:id="@+id/viewBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>